# telegram-shop-bot-byDjango

./: .gitignore  pyproject.toml  setenv.sh
backend/src/cart/: models.py  serializers.py  urls.py  views.py
backend/src/cart/migrations/: 0001_initial.py
backend/src/proj/: settings.py  urls.py
backend/src/shop/: admin.py  models.py  seriaizers.py  urls.py  views.py
backend/src/shop/migrations/: 0001_initial.py  0002_alter_category_options_alter_item_description_and_more.py  0003_alter_item_name_alter_item_price_alter_item_slug.py
bot/: __init__.py  main.py  states.py
bot/database/: main.py
bot/database/methods/: create.py
bot/handlers/: main.py
bot/handlers/admin/: __init__.py  main.py
bot/handlers/user/: __init__.py  main.py
bot/keyboards/: inline.py  reply.py
bot/misc/: __init__.py  env.py  fetch_data.py  utils.py
